2008-04-29  Jonh Wendell <jwendell@gnome.org>

	* Added "Send ctrl-alt-del" option to menu and toolbar.
	Closes #490841. Patch from Henrik Holst.

2008-04-21  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.2

==================== 2.23.1 =====================

2008-04-16  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/vinagre-notebook.c: make the notebook tab close buttons smaller to
	save some vertical space

2008-04-16  Jonh Wendell <jwendell@gnome.org>

	Provide a 'read only' mode. Closes #509945.

2008-04-09  Jonh Wendell <jwendell@gnome.org>

	Show avahi-found hosts in side panel and bookmark menu. Closes #512918.
	
	* configure.ac:
	 - Bump avahi dependency to 0.6.22
	 - Bump gtk-vnc dependency to 0.3.5
	 - Avahi dependency is mandatory now
	 - Also depends on avahi-gobject
	* src/vinagre-mdns.[ch]: New files, mdns class
	* vinagre-window.[ch],
	* vinagre-fav.c: Make use of new mdns class

2008-04-03  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-commands.c: Show an error message if running composited
	window and try to enable scaling. Compiz doesn't work well with OpenGL
	applications yet.

2008-04-03  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.[ch],
	* src/vinagre-window.[ch]: Better handles menus sensitivity.
	* src/vinagre-bookmarks.c,
	* src/vinagre-commands.c:
	- Don't crash when adding a bookmark after the connection is closed. (LP: #205303).
	- Ignore NULL hosts in bookmarks file.

2008-04-03  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c:
	Changed properties types from pointer to object;
	Use new gtk-vnc API vnc_display_force_grab() in fullscreen handling.

2008-03-29  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-utils.[ch],
	* src/vinagre-main.c: Use the new debug stuff from gtk-vnc

2008-03-24  Jonh Wendell <jwendell@gnome.org>
	- Make VinagreBookmarks a GObject.
	- Modify the side panel interface.

2008-03-19  Jonh Wendell <jwendell@gnome.org>
	Make VinagreConnection a GObject.
