@@ -1,3 +1,10 @@
+2008-04-30  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-prefs-manager.[ch],
+	* src/vinagre-tab.c,
+	* data/vinagre.schemas.in: Added a gconf key (shared_flag) to tell
+	whether to share the desktop with other clients.
+
 2008-04-29  Jonh Wendell <jwendell@gnome.org>
 
 	* Added "Send ctrl-alt-del" option to menu and toolbar.
